# obscura

./: .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.json  environment.yml  pyproject.toml  requirements.in  requirements.txt
.github/actions/build-docs/: action.yml
docker/: Dockerfile  entrypoint.sh
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0ce46c65aea6ef88_background_py.html  z_0ce46c65aea6ef88_camera_py.html  z_0ce46c65aea6ef88_lighting_py.html  z_0ce46c65aea6ef88_material_py.html  z_0ce46c65aea6ef88_object_settings_py.html  z_0ce46c65aea6ef88_render_settings_py.html  z_0ce46c65aea6ef88_rendering_pipeline_py.html  z_1267234e175a5c72_main_py.html  z_3bdce20f0c004c34_main_py.html  z_803ad541a056bb7c_example_py.html  z_803ad541a056bb7c_run_py.html  z_803ad541a056bb7c_utilities_py.html  z_a8c80c07642bbea5_convert_vtu_to_stl_py.html  z_a8c80c07642bbea5_example_py.html  z_a8c80c07642bbea5_parametric_render_py.html  z_a8c80c07642bbea5_run_py.html  z_a8c80c07642bbea5_utilities_py.html
src/obscura/: main.py
src/obscura/configs/: config_example.yaml  params.json  params.yaml
src/obscura/core/: convert_vtu_to_stl.py  example.py  parametric_render.py  render.py  run.py  utilities.py
src/obscura/core/rendering/: background.py  camera.py  lighting.py  material.py  object_settings.py  render.py  render_settings.py  rendering_pipeline.py
tests/obscura/: test_main.py
tests/obscura/core/: test_example.py  test_run.py  test_utilities.py
tests/obscura/core/rendering/: test_rendering_pipeline.py
