## Overall setup

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Obscura"
version = "1.0"
authors = [{ name = "David Rudlstorfer" }]
maintainers = [{ name = "David Rudlstorfer" }]
description = "A quick start Python skeleton with many amenities"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Skeleton", "Documentation", "CICD", "Testing", "Pre-Commit"]
classifiers = ["Programming Language :: Python :: 3.13"]

requires-python = "==3.11.*"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["obscura"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools.dynamic.optional-dependencies]
safe = {file = ["requirements.txt"]}

[project.scripts]
obscura = "obscura.main:main"

## Tools

# necessary for the coverage badge
[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=50 --cov=src/obscura"
